--- a/taecg.shaderReference.Editor.csproj
+++ b/taecg.shaderReference.Editor.csproj
@@ -9,10 +9,10 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{6DBDD656-6215-C7D4-8F62-DD67AECF0685}</ProjectGuid>
+    <ProjectGuid>{B5B08E85-7872-EFBA-E8E5-76B2DC281F9E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>Assembly-CSharp</AssemblyName>
+    <AssemblyName>taecg.shaderReference.Editor</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseDirectory>.</BaseDirectory>
@@ -48,19 +48,36 @@
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <UnityProjectGenerator>Package</UnityProjectGenerator>
     <UnityProjectGeneratorVersion>2.0.11</UnityProjectGeneratorVersion>
-    <UnityProjectType>Game:1</UnityProjectType>
+    <UnityProjectType>Editor:5</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2020.3.23f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Assets\URPDemo\TutorialInfo\Scripts\Readme.cs" />
-    <Compile Include="Assets\URPDemo\Scripts\SimpleCameraController.cs" />
-    <Compile Include="Assets\Tabs\1-Basics\Mathematical Surfaces\Function Library.cs" />
-    <Compile Include="Assets\Tabs\1-Basics\BuildingAGraph\GraphAni.cs" />
-    <Compile Include="Assets\Tabs\1-Basics\GameObjAndScripts\MovePointer.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceUtil.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceMath.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferencePipline.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceSemantics.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceBuildInVariables.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceProperties.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceLighting.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceErrorDebug.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferencePlatformDifferences.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceBuildInTransformation.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceRenderState.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceOther.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceTransformation.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferencePragma.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceTags.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceAbout.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceGLSL.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceSearch.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceMiscellaneous.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceSetup.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferenceEditorWindow.cs" />
+    <Compile Include="Assets\ShaderRefrence\Editor\ShaderReferencePredefinedMacros.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\Tabs\1-Basics\BuildingAGraph\PointerSurface.shader" />
+    <None Include="Assets\ShaderRefrence\Editor\taecg.shaderReference.Editor.asmdef" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -285,8 +302,29 @@
     <Reference Include="UnityEditor.UnityConnectModule">
       <HintPath>D:\SoftWare\UnityEngine\2020.3.23f1\Editor\Data\Managed\UnityEngine\UnityEditor.UnityConnectModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEditor.Graphs">
+      <HintPath>D:\SoftWare\UnityEngine\2020.3.23f1\Editor\Data\Managed\UnityEditor.Graphs.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.WindowsStandalone.Extensions">
+      <HintPath>D:\SoftWare\UnityEngine\2020.3.23f1\Editor\Data\PlaybackEngines\WindowsStandaloneSupport\UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Plastic.Antlr3.Runtime">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.5.7\Lib\Editor\PlasticSCM\Unity.Plastic.Antlr3.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="log4netPlastic">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.5.7\Lib\Editor\PlasticSCM\log4netPlastic.dll</HintPath>
+    </Reference>
+    <Reference Include="ICSharpCode.NRefactory">
+      <HintPath>Library\PackageCache\com.unity.render-pipelines.core@10.7.0\Editor\ShaderGenerator\ICSharpCode.NRefactory.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>Library\PackageCache\com.unity.nuget.newtonsoft-json@2.0.0\Runtime\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="unityplastic">
+      <HintPath>Library\PackageCache\com.unity.collab-proxy@1.5.7\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>Library\PackageCache\com.unity.ext.nunit@1.0.6\net35\unity-custom\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>D:\SoftWare\UnityEngine\2020.3.23f1\Editor\Data\MonoBleedingEdge\lib\mono\4.7.1-api\mscorlib.dll</HintPath>
@@ -636,72 +674,20 @@
     <Reference Include="System.Xml.XPath.XDocument">
       <HintPath>D:\SoftWare\UnityEngine\2020.3.23f1\Editor\Data\MonoBleedingEdge\lib\mono\4.7.1-api\Facades\System.Xml.XPath.XDocument.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.ShaderGraph.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.ShaderGraph.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Universal.Shaders">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Shaders.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Universal.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Universal.Runtime">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.TextMeshPro.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VisualStudio.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.VisualStudio.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipeline.Universal.ShaderLibrary">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipeline.Universal.ShaderLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Timeline.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.Timeline.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Timeline">
-      <HintPath>Library\ScriptAssemblies\Unity.Timeline.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.TextMeshPro">
-      <HintPath>Library\ScriptAssemblies\Unity.TextMeshPro.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Mathematics.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.Mathematics.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Searcher.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.Searcher.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Core.Runtime">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.Runtime.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEditor.UI">
       <HintPath>Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.PlasticSCM.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.PlasticSCM.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Core.ShaderLibrary">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\ScriptAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.RenderPipelines.Core.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.Editor.dll</HintPath>
+    <Reference Include="UnityEngine.TestRunner">
+      <HintPath>Library\ScriptAssemblies\UnityEngine.TestRunner.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Mathematics">
-      <HintPath>Library\ScriptAssemblies\Unity.Mathematics.dll</HintPath>
+    <Reference Include="UnityEditor.TestRunner">
+      <HintPath>Library\ScriptAssemblies\UnityEditor.TestRunner.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="taecg.shaderReference.Editor.csproj">
-      <Project>{B5B08E85-7872-EFBA-E8E5-76B2DC281F9E}</Project>
-      <Name>taecg.shaderReference.Editor</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
