--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,15 +47,18 @@
   <PropertyGroup>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <UnityProjectGenerator>Package</UnityProjectGenerator>
-    <UnityProjectGeneratorVersion>2.0.11</UnityProjectGeneratorVersion>
+    <UnityProjectGeneratorVersion>2.0.12</UnityProjectGeneratorVersion>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2020.3.23f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Assets\URPDemo\TutorialInfo\Scripts\Readme.cs" />
+    <Compile Include="Assets\Tabs\7-CustomSRP\Custom Render Pipeline\Universal RP\Runtime\CustomRenderPipelineAsset.cs" />
+    <Compile Include="Assets\Tabs\7-CustomSRP\Custom Render Pipeline\Universal RP\Runtime\CustomRenderPipeline.cs" />
     <Compile Include="Assets\URPDemo\Scripts\SimpleCameraController.cs" />
     <Compile Include="Assets\Tabs\1-Basics\Mathematical Surfaces\Function Library.cs" />
+    <Compile Include="Assets\Tabs\7-CustomSRP\Custom Render Pipeline\Universal RP\Runtime\CameraRender.cs" />
     <Compile Include="Assets\Tabs\1-Basics\BuildingAGraph\GraphAni.cs" />
     <Compile Include="Assets\Tabs\1-Basics\GameObjAndScripts\MovePointer.cs" />
   </ItemGroup>
@@ -656,12 +659,6 @@
     </Reference>
     <Reference Include="Unity.RenderPipeline.Universal.ShaderLibrary">
       <HintPath>Library\ScriptAssemblies\Unity.RenderPipeline.Universal.ShaderLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Timeline.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.Timeline.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Timeline">
-      <HintPath>Library\ScriptAssemblies\Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary">
       <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
