--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -176,6 +176,7 @@
     <None Include="Assets\ShaderBook\BookRes\Shaders\Chapter12\Chapter12-GaussianBlur.shader" />
     <None Include="Assets\ShaderBook\BookRes\Shaders\Chapter10\Chapter10-Fresnel.shader" />
     <None Include="Assets\ShaderBook\BookRes\Shaders\Chapter12\Chapter12-BrightnessSaturationAndContrast.shader" />
+    <None Include="Assets\Tabs\7-CustomSRP\Custom RP\ShaderLibrary\Shadows.hlsl" />
     <None Include="Assets\ShaderBook\Shader\Shader-Tutorial\14\HatchingShading.shader" />
     <None Include="Assets\ShaderBook\BookRes\Shaders\Chapter6\Chapter6-DiffuseVertexLevel.shader" />
     <None Include="Assets\ShaderBook\BookRes\Shaders\Common\BumpedDiffuse.shader" />
