--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Assets\ShaderBook\BookRes\Scripts\Chapter13\MotionBlurWithDepthTexture.cs" />
     <Compile Include="Assets\ShaderBook\Shader\Shader-Tutorial\15\FogWithNoiseTex.cs" />
     <Compile Include="Assets\Tabs\7-CustomSRP\Custom RP\Runtime\ShadowSettings.cs" />
+    <Compile Include="Assets\Tabs\7-CustomSRP\Custom RP\Runtime\CustomRenderPipeline.Editor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\IGGWorkTest\SimpleGuideFog.shader" />
