更新 多相机 章节
-支持了相机渲染剔除层级设置，上一次提交也支持了后处理的覆盖设置

--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Assets\ShaderBook\BookRes\Editor\Chapter3\CustomShaderGUI.cs" />
     <Compile Include="Assets\ShaderBook\BookRes\Editor\Chapter10\RenderCubemapWizard.cs" />
     <Compile Include="Assets\Tabs\7-CustomSRP\Custom RP\Editor\CustomShaderGUICatLike.cs" />
+    <Compile Include="Assets\Tabs\7-CustomSRP\Custom RP\Editor\RenderingLayerMaskDrawer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
