更新 特效 章节
-设置两个特效系统，添加一部分UnlitShader支持

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Assets\Tabs\7-CustomSRP\Custom RP\Runtime\RenderingLayerMaskFieldAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Tabs\7-CustomSRP\Custom RP\Shaders\Unlit-particles.shader" />
     <None Include="Assets\ShaderBook\Shader\Shader-Tutorial\12\EdgeTest.shader" />
     <None Include="Assets\Tabs\7-CustomSRP\Custom RP\ShaderLibrary\Surface.hlsl" />
     <None Include="Assets\ShaderBook\Shader\Shader-Tutorial\6\SpecularFragLevel-Phong.shader" />
