--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -210,6 +210,7 @@
     <None Include="Assets\ShaderBook\BookRes\Shaders\Chapter13\Chapter13-MotionBlurWithDepthTexture.shader" />
     <None Include="Assets\ShaderBook\Shader\Shader-Tutorial\11\Water.shader" />
     <None Include="Assets\ShaderBook\BookRes\Shaders\Chapter12\Chapter12-BrightnessSaturationAndContrast.shader" />
+    <None Include="Assets\Tabs\8-AdvancedRendering\FlatandWireframeShading\FlatWireframe.shader" />
     <None Include="Assets\ShaderBook\BookRes\Shaders\Chapter11\Chapter11-ImageSequenceAnimation.shader" />
     <None Include="Assets\Tabs\7-CustomSRP\Custom RP\Shaders\UnlitPass.hlsl" />
     <None Include="Assets\ShaderBook\Shader\Shader-Tutorial\6\SpecularFragLevel-UseBuildInBlinPhong.shader" />
@@ -246,6 +247,7 @@
     <None Include="Assets\ShaderBook\BookRes\Shaders\Chapter5\Chapter5-FalseColor.shader" />
     <None Include="Assets\ZhuangDong\L2\TestSur.shader" />
     <None Include="Assets\ShaderBook\BookRes\Shaders\Chapter15\Chapter15-FogWithNoise.shader" />
+    <None Include="Assets\Tabs\7-CustomSRP\Custom RP\Shaders\NewUnlitShader.shader" />
     <None Include="Assets\ShaderBook\BookRes\Shaders\Chapter12\Chapter12-EdgeDetection.shader" />
     <None Include="Assets\Tabs\7-CustomSRP\Custom RP\ShaderLibrary\GI.hlsl" />
     <None Include="Assets\ShaderBook\BookRes\Shaders\Chapter11\Chapter11-Water.shader" />
@@ -879,9 +881,6 @@
     <Reference Include="Unity.Searcher.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Searcher.Editor.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEditor.UI">
-      <HintPath>Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.PlasticSCM.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.PlasticSCM.Editor.dll</HintPath>
     </Reference>
@@ -890,9 +889,6 @@
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.ShaderLibrary">
       <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>Library\ScriptAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.Editor.dll</HintPath>
@@ -905,6 +901,14 @@
     <ProjectReference Include="taecg.shaderReference.Editor.csproj">
       <Project>{F01FBF9F-B3BC-2D19-CAA1-CF1765757F71}</Project>
       <Name>taecg.shaderReference.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="UnityEditor.UI.csproj">
+      <Project>{BF6393E5-82DD-C3EE-CC48-87E7ED046814}</Project>
+      <Name>UnityEditor.UI</Name>
+    </ProjectReference>
+    <ProjectReference Include="UnityEngine.UI.csproj">
+      <Project>{E6D385D8-FE39-1A52-396A-87077E317E71}</Project>
+      <Name>UnityEngine.UI</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
